Project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-2020-exercises
spec:
  rules:
    - http:
        paths:
          - path: /status
            pathType: Exact
            backend:
              service:
                name: dwk-2020-main-svc
                port:
                  number: 2346
          - path: /
            pathType: Exact
            backend:
              service:
                name: dwk-2020-project-svc
                port:
                  number: 2347
